--- a/app/src/main/res/layout/activity_list_cat.xml
+++ b/app/src/main/res/layout/activity_list_cat.xml
@@ -24,7 +24,7 @@
     <ImageView
         android:id="@+id/imageView11"
         android:layout_width="9dp"
-        android:layout_height="45dp"
+        android:layout_height="50dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/back_1"
@@ -37,17 +37,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="List Kucing"
-        android:textColor="@color/salem"
-        android:textSize="22sp"
+        android:textColor="@color/navy"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView11"
         app:layout_constraintStart_toEndOf="@+id/imageView11"
         app:layout_constraintTop_toTopOf="@+id/imageView11" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,4 +56,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16"
         tools:listitem="@layout/item_list_cat" />
+
+    <dita.shafira.mate.component.BtnOutline
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="Tambah Kucing"
+        android:textStyle="bold"
+        android:textColor="@color/soft_guava"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
