--- a/app/src/main/res/drawable/btn_outline.xml
+++ b/app/src/main/res/drawable/btn_outline.xml
@@ -1,16 +1,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/salem" />
+            <solid android:color="@color/soft_guava" />
             <corners android:radius="6dp" />
-            <padding android:left="4dp" android:right="4dp" />
+            <padding android:left="2dp" android:right="2dp" />
         </shape>
     </item>
     <item>
         <shape>
             <corners android:radius="8dp" />
             <padding android:left="4dp" android:right="4dp" />
-            <stroke android:color="@color/salem" android:width="5dp"/>
+            <stroke android:color="@color/beige" android:width="5dp"/>
         </shape>
     </item>
 </selector>
