--- a/app/src/main/res/drawable/btn_solid.xml
+++ b/app/src/main/res/drawable/btn_solid.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/dark_salem" />
+            <solid android:color="@color/beige" />
             <corners android:radius="6dp" />
             <padding android:left="4dp" android:right="4dp" />
         </shape>
