--- a/app/src/main/res/drawable/btn_solid_disable_2.xml
+++ b/app/src/main/res/drawable/btn_solid_disable_2.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/beige" />
+            <solid android:color="@color/salem" />
             <corners android:radius="6dp" />
             <padding android:left="4dp" android:right="4dp" />
         </shape>
@@ -10,7 +10,7 @@
         <shape>
             <corners android:radius="8dp" />
             <padding android:left="4dp" android:right="4dp" />
-            <solid android:color="@color/beige" />
+            <solid android:color="@color/salem" />
         </shape>
     </item>
 </selector>
