--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backdrop_1"
+    android:background="@drawable/ic_android_mobile___1"
     tools:context=".MainActivity">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/path_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="16dp"
         android:text="Welcome To Match Cat"
         android:textAlignment="center"
-        android:textColor="@color/salem"
+        android:textColor="@color/navy"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,15 +27,13 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/logo_3"
+        android:layout_height="450dp"
+        android:src="@drawable/pic_logo_1"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <dita.shafira.mate.component.BtnSolid
         android:id="@+id/btnSolid"
@@ -59,11 +44,12 @@
         android:layout_marginBottom="32dp"
         android:text="Login"
         android:textColor="@color/white"
+        android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/btnOutline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <dita.shafira.mate.component.BtnOutline
+    <dita.shafira.mate.component.BtnLightSolid
         android:id="@+id/btnOutline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -71,7 +57,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="64dp"
         android:text="Register"
-        android:textColor="@color/salem"
+        android:textColor="@color/navy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
