--- a/app/src/main/res/layout/item_list_cat.xml
+++ b/app/src/main/res/layout/item_list_cat.xml
@@ -20,15 +20,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageView"
+            app:riv_corner_radius="10dp"
             android:layout_width="0dp"
             android:layout_height="350dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-
-            android:background="@color/salem"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
