--- a/app/src/main/res/layout/item_list_cat_2.xml
+++ b/app/src/main/res/layout/item_list_cat_2.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="20dp"
-    android:layout_width="150dp"
-    android:layout_height="270dp"
+    android:layout_width="175dp"
+    android:layout_height="280dp"
     android:layout_margin="5dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,15 +20,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageView"
+            app:riv_corner_radius="10dp"
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-
-            android:background="@color/salem"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -78,21 +77,25 @@
             app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
         <ImageView
+            android:id="@+id/like"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/like_logo"
-            app:layout_constraintEnd_toEndOf="@+id/textView30"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
         <ImageView
+            android:id="@+id/chat"
             android:layout_width="0dp"
             android:layout_height="24dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/chat_logo"
-            app:layout_constraintStart_toStartOf="@+id/textView30"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/textView30" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
